--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-Pyrogram==1.2.9
-TgCrypto==1.2.2
+Pyrogram
+TgCrypto
 youtube_dl
 youtube_search_python
 youtube_search
 requests
 ffmpeg-python
 ffmpeg
+eyeD3
+lyricsgenius
+spotipy
